# chat-demo

./: .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  latestsMod.md  main.py  pyproject.toml  skills-lock.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
catalog/: Incidentes.xlsx  incident_catalog.md
src/: config.py  content_safety.py  models.py
src/catalog/: parser.py
src/db/: engine.py  repositories.py
src/graph/: builder.py  edges.py  nodes.py  state.py
src/media/: processor.py
src/memory/: user_memory.py
src/prompts/: loader.py
src/prompts/templates/: classify.j2  collect_field.j2  confirm.j2  content_safety.j2  system.j2
src/whatsapp/: client.py  graph_adapter.py  webhook.py
